[package]
name = "tiwi"
version = "0.1.0"
description = "a command-line event tracking tool"
keywords = ["cli", "terminal", "tool"]
authors = ["Austin Jones <implAustin@gmail.com>"]
categories = ["command-line-utilities"]
homepage = "https://github.com/austinjones/tiwi-rs"
repository = "https://github.com/austinjones/tiwi-rs"
license = "MIT"
readme = "README.md"
authors = ["Austin Jones"]
edition = "2018"

[dependencies]
anyhow = "1.0.33"
chrono = "0.4.19"
clap = "2.33.3"
crossterm = "0.18.0"
